@@ -27,33 +27,32 @@ import com.amazonaws.athena.connector.lambda.domain.TableName;
 import com.amazonaws.athena.connector.lambda.domain.predicate.Constraints;
 import com.amazonaws.athena.connector.lambda.metadata.*;
 import com.amazonaws.athena.connector.lambda.security.FederatedIdentity;
-import com.amazonaws.services.glue.AWSGlue;
-import com.amazonaws.services.glue.AWSGlueClientBuilder;
-import com.amazonaws.services.glue.model.GetSchemaResult;
-import com.amazonaws.services.glue.model.GetSchemaVersionResult;
-import com.amazonaws.services.glue.model.ListRegistriesResult;
-import com.amazonaws.services.glue.model.RegistryListItem;
-import com.amazonaws.services.secretsmanager.AWSSecretsManagerClientBuilder;
-import org.apache.kafka.clients.consumer.KafkaConsumer;
 import org.apache.kafka.clients.consumer.MockConsumer;
 import org.apache.kafka.clients.consumer.OffsetResetStrategy;
 import org.apache.kafka.common.PartitionInfo;
 import org.apache.kafka.common.TopicPartition;
 import org.junit.After;
 import org.junit.Before;
-import org.junit.Rule;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.Mock;
+import org.mockito.MockedStatic;
 import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
-import org.powermock.api.mockito.PowerMockito;
-import org.powermock.core.classloader.annotations.PowerMockIgnore;
-import org.powermock.core.classloader.annotations.PrepareForTest;
-import org.powermock.modules.junit4.PowerMockRunner;
-import org.junit.contrib.java.lang.system.EnvironmentVariables;
+import org.mockito.junit.MockitoJUnitRunner;
+import software.amazon.awssdk.services.glue.GlueClient;
+import software.amazon.awssdk.services.glue.model.DataFormat;
+import software.amazon.awssdk.services.glue.model.GetSchemaRequest;
+import software.amazon.awssdk.services.glue.model.GetSchemaResponse;
+import software.amazon.awssdk.services.glue.model.GetSchemaVersionRequest;
+import software.amazon.awssdk.services.glue.model.GetSchemaVersionResponse;
+import software.amazon.awssdk.services.glue.model.ListRegistriesRequest;
+import software.amazon.awssdk.services.glue.model.ListRegistriesResponse;
+import software.amazon.awssdk.services.glue.model.RegistryListItem;
 
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -61,15 +60,10 @@ import java.util.stream.Collectors;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNull;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-@RunWith(PowerMockRunner.class)
-@PowerMockIgnore({"com.sun.org.apache.xerces.*", "javax.xml.*", "org.xml.*",
-        "javax.management.*", "org.w3c.*", "javax.net.ssl.*", "sun.security.*", "jdk.internal.reflect.*", "javax.crypto.*", "javax.security.*"
-})
-@PrepareForTest({AWSSecretsManagerClientBuilder.class, AWSGlueClientBuilder.class, GlueRegistryReader.class})
+@RunWith(MockitoJUnitRunner.class)
 public class AmazonMskMetadataHandlerTest {
     private static final String QUERY_ID = "queryId";
     private AmazonMskMetadataHandler amazonMskMetadataHandler;
@@ -78,12 +72,10 @@ public class AmazonMskMetadataHandlerTest {
     private Block partitions;
     private List<String> partitionCols;
     private Constraints constraints;
-
-    @Rule
-    public EnvironmentVariables environmentVariables = new EnvironmentVariables();
+    private MockedStatic<GlueClient>  awsGlueClientBuilder;
 
     @Mock
-    AWSGlue awsGlue;
+    GlueClient awsGlue;
 
     MockConsumer<String, String> consumer;
 
@@ -95,23 +87,25 @@ public class AmazonMskMetadataHandlerTest {
         partitions = Mockito.mock(Block.class);
         partitionCols = Mockito.mock(List.class);
         constraints = Mockito.mock(Constraints.class);
-        environmentVariables.set("aws.region", "us-west-2");
-        environmentVariables.set("glue_registry_arn", "arn:aws:glue:us-west-2:123456789101:registry/Athena-NEW");
-        environmentVariables.set("auth_type", AmazonMskUtils.AuthType.SSL.toString());
-        environmentVariables.set("secret_manager_msk_creds_name", "testSecret");
-        environmentVariables.set("kafka_endpoint", "12.207.18.179:9092");
-        environmentVariables.set("certificates_s3_reference", "s3://msk-connector-test-bucket/mskfiles/");
-        environmentVariables.set("secrets_manager_secret", "AmazonMSK_afq");
+        java.util.Map configOptions = com.google.common.collect.ImmutableMap.of(
+            "aws.region", "us-west-2",
+            "glue_registry_arn", "arn:aws:glue:us-west-2:123456789101:registry/Athena-NEW",
+            "auth_type", AmazonMskUtils.AuthType.SSL.toString(),
+            "secret_manager_msk_creds_name", "testSecret",
+            "kafka_endpoint", "12.207.18.179:9092",
+            "certificates_s3_reference", "s3://msk-connector-test-bucket/mskfiles/",
+            "secrets_manager_secret", "AmazonMSK_afq");
 
         consumer = new MockConsumer<>(OffsetResetStrategy.EARLIEST);
-        Map<TopicPartition, Long> partitionsStart = Map.of(
-                new TopicPartition("testTopic", 0), 0L,
-                new TopicPartition("testTopic", 1), 0L
-        );
-        Map<TopicPartition, Long> partitionsEnd = Map.of(
-                new TopicPartition("testTopic", 0), 20100L,
-                new TopicPartition("testTopic", 1), 7850L
-        );
+        Map<TopicPartition, Long> partitionsStart = new HashMap<>();
+        Map<TopicPartition, Long> partitionsEnd = new HashMap<>();
+
+        // max splits per request is 1000. Here we will make 1500 partitions that each have the max records
+        // for a single split. we expect 1500 splits to generate, over two requests.
+        for (int i = 0; i < 1500; i++) {
+            partitionsStart.put(new TopicPartition("testTopic", i), 0L);
+            partitionsEnd.put(new TopicPartition("testTopic",  i), com.amazonaws.athena.connectors.msk.AmazonMskConstants.MAX_RECORDS_IN_SPLIT - 1L); // keep simple and don't have multiple pieces
+        }
         List<PartitionInfo> partitionInfoList = new ArrayList<>(partitionsStart.keySet())
                 .stream()
                 .map(it -> new PartitionInfo(it.topic(), it.partition(), null, null, null))
@@ -119,27 +113,31 @@ public class AmazonMskMetadataHandlerTest {
         consumer.updateBeginningOffsets(partitionsStart);
         consumer.updateEndOffsets(partitionsEnd);
         consumer.updatePartitions("testTopic", partitionInfoList);
-
-        amazonMskMetadataHandler = new AmazonMskMetadataHandler(consumer);
+        awsGlueClientBuilder = Mockito.mockStatic(GlueClient.class);
+        awsGlueClientBuilder.when(()-> GlueClient.create()).thenReturn(awsGlue);
+        amazonMskMetadataHandler = new AmazonMskMetadataHandler(consumer, configOptions);
     }
 
     @After
     public void tearDown() {
         blockAllocator.close();
+        awsGlueClientBuilder.close();
     }
 
     @Test
     public void testDoListSchemaNames() {
-        PowerMockito.mockStatic(AWSGlueClientBuilder.class);
-        PowerMockito.when(AWSGlueClientBuilder.defaultClient()).thenReturn(awsGlue);
-        PowerMockito.when(awsGlue.listRegistries(any())).thenAnswer(x -> (new ListRegistriesResult()).withRegistries(
-          (new RegistryListItem()).withRegistryName("Asdf").withDescription("something something {AthenaFederationMSK} something"))
-        );
+        String registryName = "Asdf";
+        Mockito.when(awsGlue.listRegistries(any(ListRegistriesRequest.class))).thenAnswer(x -> ListRegistriesResponse.builder()
+                .registries(RegistryListItem.builder()
+                        .registryName(registryName)
+                        .description("something something {AthenaFederationMSK} something")
+                        .build())
+                .build());
 
         ListSchemasRequest listSchemasRequest = new ListSchemasRequest(federatedIdentity, QUERY_ID, "default");
         ListSchemasResponse listSchemasResponse = amazonMskMetadataHandler.doListSchemaNames(blockAllocator, listSchemasRequest);
 
-        assertEquals(new ArrayList(List.of("Asdf")), new ArrayList(listSchemasResponse.getSchemas()));
+        assertEquals(new ArrayList(com.google.common.collect.ImmutableList.of(registryName)), new ArrayList(listSchemasResponse.getSchemas()));
     }
 
     @Test(expected = RuntimeException.class)
@@ -155,29 +153,30 @@ public class AmazonMskMetadataHandlerTest {
     public void testDoGetTable() throws Exception {
         String arn = "defaultarn", schemaName = "defaultschemaname", schemaVersionId = "defaultversionid";
         Long latestSchemaVersion = 123L;
-        GetSchemaResult getSchemaResult = new GetSchemaResult();
-        GetSchemaVersionResult getSchemaVersionResult = new GetSchemaVersionResult();
-        getSchemaResult.setSchemaArn(arn);
-        getSchemaResult.setSchemaName(schemaName);
-        getSchemaResult.setLatestSchemaVersion(latestSchemaVersion);
-        getSchemaVersionResult.setSchemaArn(arn);
-        getSchemaVersionResult.setSchemaVersionId(schemaVersionId);
-        getSchemaVersionResult.setSchemaDefinition("{\n" +
-                "\t\"topicName\": \"testtable\",\n" +
-                "\t\"message\": {\n" +
-                "\t\t\"dataFormat\": \"json\",\n" +
-                "\t\t\"fields\": [{\n" +
-                "\t\t\t\"name\": \"intcol\",\n" +
-                "\t\t\t\"mapping\": \"intcol\",\n" +
-                "\t\t\t\"type\": \"INTEGER\"\n" +
-                "\t\t}]\n" +
-                "\t}\n" +
-                "}");
-        PowerMockito.mockStatic(AWSGlueClientBuilder.class);
-        PowerMockito.when(AWSGlueClientBuilder.defaultClient()).thenReturn(awsGlue);
-        PowerMockito.when(awsGlue.getSchema(any())).thenReturn(getSchemaResult);
-        PowerMockito.when(awsGlue.getSchemaVersion(any())).thenReturn(getSchemaVersionResult);
-        GetTableRequest getTableRequest = new GetTableRequest(federatedIdentity, QUERY_ID, "kafka", new TableName("default", "testtable"));
+        GetSchemaResponse getSchemaResponse = GetSchemaResponse.builder()
+                .schemaArn(arn)
+                .schemaName(schemaName)
+                .latestSchemaVersion(latestSchemaVersion)
+                .build();
+        GetSchemaVersionResponse getSchemaVersionResponse = GetSchemaVersionResponse.builder()
+                .schemaArn(arn)
+                .schemaVersionId(schemaVersionId)
+                .schemaDefinition("{\n" +
+                        "\t\"topicName\": \"testtable\",\n" +
+                        "\t\"message\": {\n" +
+                        "\t\t\"dataFormat\": \"json\",\n" +
+                        "\t\t\"fields\": [{\n" +
+                        "\t\t\t\"name\": \"intcol\",\n" +
+                        "\t\t\t\"mapping\": \"intcol\",\n" +
+                        "\t\t\t\"type\": \"INTEGER\"\n" +
+                        "\t\t}]\n" +
+                        "\t}\n" +
+                        "}")
+                .dataFormat(DataFormat.JSON)
+                .build();
+        Mockito.when(awsGlue.getSchema(any(GetSchemaRequest.class))).thenReturn(getSchemaResponse);
+        Mockito.when(awsGlue.getSchemaVersion(any(GetSchemaVersionRequest.class))).thenReturn(getSchemaVersionResponse);
+        GetTableRequest getTableRequest = new GetTableRequest(federatedIdentity, QUERY_ID, "kafka", new TableName("default", "testtable"), Collections.emptyMap());
         GetTableResponse getTableResponse = amazonMskMetadataHandler.doGetTable(blockAllocator, getTableRequest);
         assertEquals(1, getTableResponse.getSchema().getFields().size());
     }
@@ -187,28 +186,29 @@ public class AmazonMskMetadataHandlerTest {
     {
         String arn = "defaultarn", schemaName = "defaultschemaname", schemaVersionId = "defaultversionid";
         Long latestSchemaVersion = 123L;
-        GetSchemaResult getSchemaResult = new GetSchemaResult();
-        GetSchemaVersionResult getSchemaVersionResult = new GetSchemaVersionResult();
-        getSchemaResult.setSchemaArn(arn);
-        getSchemaResult.setSchemaName(schemaName);
-        getSchemaResult.setLatestSchemaVersion(latestSchemaVersion);
-        getSchemaVersionResult.setSchemaArn(arn);
-        getSchemaVersionResult.setSchemaVersionId(schemaVersionId);
-        getSchemaVersionResult.setSchemaDefinition("{\n" +
-                "\t\"topicName\": \"testTopic\",\n" +
-                "\t\"message\": {\n" +
-                "\t\t\"dataFormat\": \"json\",\n" +
-                "\t\t\"fields\": [{\n" +
-                "\t\t\t\"name\": \"intcol\",\n" +
-                "\t\t\t\"mapping\": \"intcol\",\n" +
-                "\t\t\t\"type\": \"INTEGER\"\n" +
-                "\t\t}]\n" +
-                "\t}\n" +
-                "}");
-        PowerMockito.mockStatic(AWSGlueClientBuilder.class);
-        PowerMockito.when(AWSGlueClientBuilder.defaultClient()).thenReturn(awsGlue);
-        PowerMockito.when(awsGlue.getSchema(any())).thenReturn(getSchemaResult);
-        PowerMockito.when(awsGlue.getSchemaVersion(any())).thenReturn(getSchemaVersionResult);
+        GetSchemaResponse getSchemaResponse = GetSchemaResponse.builder()
+                .schemaArn(arn)
+                .schemaName(schemaName)
+                .latestSchemaVersion(latestSchemaVersion)
+                .build();
+                GetSchemaVersionResponse getSchemaVersionResponse = GetSchemaVersionResponse.builder()
+                .schemaArn(arn)
+                .schemaVersionId(schemaVersionId)
+                .schemaDefinition("{\n" +
+                        "\t\"topicName\": \"testTopic\",\n" +
+                        "\t\"message\": {\n" +
+                        "\t\t\"dataFormat\": \"json\",\n" +
+                        "\t\t\"fields\": [{\n" +
+                        "\t\t\t\"name\": \"intcol\",\n" +
+                        "\t\t\t\"mapping\": \"intcol\",\n" +
+                        "\t\t\t\"type\": \"INTEGER\"\n" +
+                        "\t\t}]\n" +
+                        "\t}\n" +
+                        "}")
+                .dataFormat(DataFormat.JSON)
+                .build();
+        Mockito.when(awsGlue.getSchema(any(GetSchemaRequest.class))).thenReturn(getSchemaResponse);
+        Mockito.when(awsGlue.getSchemaVersion(any(GetSchemaVersionRequest.class))).thenReturn(getSchemaVersionResponse);
 
         GetSplitsRequest request = new GetSplitsRequest(
                 federatedIdentity,
@@ -218,10 +218,24 @@ public class AmazonMskMetadataHandlerTest {
                 Mockito.mock(Block.class),
                 new ArrayList<>(),
                 Mockito.mock(Constraints.class),
-                "continuationToken"
+                null 
         );
 
         GetSplitsResponse response = amazonMskMetadataHandler.doGetSplits(blockAllocator, request);
-        assertEquals(4, response.getSplits().size());
+        assertEquals(1000, response.getSplits().size());
+        assertEquals("1000", response.getContinuationToken());
+        request = new GetSplitsRequest(
+                federatedIdentity,
+                QUERY_ID,
+                "kafka",
+                new TableName("default", "testTopic"),
+                Mockito.mock(Block.class),
+                new ArrayList<>(),
+                Mockito.mock(Constraints.class),
+                response.getContinuationToken()
+        );
+        response = amazonMskMetadataHandler.doGetSplits(blockAllocator, request);
+        assertEquals(500, response.getSplits().size());
+        assertNull(response.getContinuationToken());
     }
 }
