@@ -19,6 +19,7 @@
  * #L%
  */
 package com.amazonaws.athena.connectors.saphana;
+
 import com.amazonaws.athena.connector.lambda.QueryStatusChecker;
 import com.amazonaws.athena.connector.lambda.data.Block;
 import com.amazonaws.athena.connector.lambda.data.BlockAllocator;
@@ -28,12 +29,19 @@ import com.amazonaws.athena.connector.lambda.data.SchemaBuilder;
 import com.amazonaws.athena.connector.lambda.data.SupportedTypes;
 import com.amazonaws.athena.connector.lambda.domain.Split;
 import com.amazonaws.athena.connector.lambda.domain.TableName;
+import com.amazonaws.athena.connector.lambda.domain.predicate.functions.StandardFunctions;
 import com.amazonaws.athena.connector.lambda.domain.spill.SpillLocation;
+import com.amazonaws.athena.connector.lambda.metadata.GetDataSourceCapabilitiesRequest;
+import com.amazonaws.athena.connector.lambda.metadata.GetDataSourceCapabilitiesResponse;
 import com.amazonaws.athena.connector.lambda.metadata.GetSplitsRequest;
 import com.amazonaws.athena.connector.lambda.metadata.GetSplitsResponse;
 import com.amazonaws.athena.connector.lambda.metadata.GetTableLayoutRequest;
-import com.amazonaws.athena.connector.lambda.metadata.GetTableRequest;
-import com.amazonaws.athena.connector.lambda.metadata.GetTableResponse;
+import com.amazonaws.athena.connector.lambda.metadata.optimizations.DataSourceOptimizations;
+import com.amazonaws.athena.connector.lambda.metadata.optimizations.OptimizationSubType;
+import com.amazonaws.athena.connector.lambda.metadata.optimizations.pushdown.ComplexExpressionPushdownSubType;
+import com.amazonaws.athena.connector.lambda.metadata.optimizations.pushdown.FilterPushdownSubType;
+import com.amazonaws.athena.connector.lambda.metadata.optimizations.pushdown.LimitPushdownSubType;
+import com.amazonaws.athena.connector.lambda.metadata.optimizations.pushdown.TopNPushdownSubType;
 import com.amazonaws.athena.connectors.jdbc.connection.DatabaseConnectionConfig;
 import com.amazonaws.athena.connectors.jdbc.connection.DatabaseConnectionInfo;
 import com.amazonaws.athena.connectors.jdbc.connection.GenericJdbcConnectionFactory;
@@ -42,9 +50,10 @@ import com.amazonaws.athena.connectors.jdbc.manager.JDBCUtil;
 import com.amazonaws.athena.connectors.jdbc.manager.JdbcArrowTypeConverter;
 import com.amazonaws.athena.connectors.jdbc.manager.JdbcMetadataHandler;
 import com.amazonaws.athena.connectors.jdbc.manager.PreparedStatementBuilder;
-import com.amazonaws.services.athena.AmazonAthena;
-import com.amazonaws.services.secretsmanager.AWSSecretsManager;
+import com.amazonaws.athena.connectors.jdbc.resolver.JDBCCaseResolver;
+import com.amazonaws.athena.connectors.saphana.resolver.SaphanaJDBCCaseResolver;
 import com.google.common.annotations.VisibleForTesting;
+import com.google.common.collect.ImmutableMap;
 import org.apache.arrow.vector.complex.reader.FieldReader;
 import org.apache.arrow.vector.types.Types;
 import org.apache.arrow.vector.types.pojo.ArrowType;
@@ -53,9 +62,10 @@ import org.apache.arrow.vector.types.pojo.FieldType;
 import org.apache.arrow.vector.types.pojo.Schema;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import software.amazon.awssdk.services.athena.AthenaClient;
+import software.amazon.awssdk.services.secretsmanager.SecretsManagerClient;
 
 import java.sql.Connection;
-import java.sql.DatabaseMetaData;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
@@ -63,11 +73,12 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static com.amazonaws.athena.connectors.saphana.SaphanaConstants.DATA_TYPE_QUERY_FOR_TABLE;
 import static com.amazonaws.athena.connectors.saphana.SaphanaConstants.DATA_TYPE_QUERY_FOR_VIEW;
+import static com.amazonaws.athena.connectors.saphana.SaphanaConstants.SAPHANA_NAME;
 import static com.amazonaws.athena.connectors.saphana.SaphanaConstants.SAPHANA_QUOTE_CHARACTER;
 import static com.amazonaws.athena.connectors.saphana.SaphanaConstants.TO_WELL_KNOWN_TEXT_FUNCTION;
 
@@ -75,29 +86,67 @@ public class SaphanaMetadataHandler extends JdbcMetadataHandler
 {
     private static final Logger LOGGER = LoggerFactory.getLogger(SaphanaMetadataHandler.class);
 
-    public SaphanaMetadataHandler()
+    public SaphanaMetadataHandler(java.util.Map<String, String> configOptions)
     {
-        this(JDBCUtil.getSingleDatabaseConfigFromEnv(SaphanaConstants.SAPHANA_NAME));
+        this(JDBCUtil.getSingleDatabaseConfigFromEnv(SaphanaConstants.SAPHANA_NAME, configOptions), configOptions);
     }
     /**
      * Used by Mux.
      */
-    public SaphanaMetadataHandler(final DatabaseConnectionConfig databaseConnectionConfig)
+    public SaphanaMetadataHandler(DatabaseConnectionConfig databaseConnectionConfig, java.util.Map<String, String> configOptions)
     {
         this(databaseConnectionConfig, new GenericJdbcConnectionFactory(databaseConnectionConfig,
                 SaphanaConstants.JDBC_PROPERTIES, new DatabaseConnectionInfo(SaphanaConstants.SAPHANA_DRIVER_CLASS,
-                SaphanaConstants.SAPHANA_DEFAULT_PORT)));
+                SaphanaConstants.SAPHANA_DEFAULT_PORT)), configOptions);
     }
     @VisibleForTesting
-    protected SaphanaMetadataHandler(final DatabaseConnectionConfig databaseConnectionConfig, final AWSSecretsManager secretsManager,
-                                     AmazonAthena athena, final JdbcConnectionFactory jdbcConnectionFactory)
+    protected SaphanaMetadataHandler(
+        DatabaseConnectionConfig databaseConnectionConfig,
+        SecretsManagerClient secretsManager,
+        AthenaClient athena,
+        JdbcConnectionFactory jdbcConnectionFactory,
+        java.util.Map<String, String> configOptions,
+        JDBCCaseResolver caseResolver)
     {
-        super(databaseConnectionConfig, secretsManager, athena, jdbcConnectionFactory);
+        super(databaseConnectionConfig,
+                secretsManager,
+                athena,
+                jdbcConnectionFactory,
+                configOptions,
+                caseResolver);
     }
 
-    public SaphanaMetadataHandler(DatabaseConnectionConfig databaseConnectionConfig, GenericJdbcConnectionFactory jdbcConnectionFactory)
+    public SaphanaMetadataHandler(DatabaseConnectionConfig databaseConnectionConfig, GenericJdbcConnectionFactory jdbcConnectionFactory, java.util.Map<String, String> configOptions)
     {
-            super(databaseConnectionConfig, jdbcConnectionFactory);
+            super(databaseConnectionConfig,
+                    jdbcConnectionFactory,
+                    configOptions,
+                    new SaphanaJDBCCaseResolver(SAPHANA_NAME));
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    public GetDataSourceCapabilitiesResponse doGetDataSourceCapabilities(BlockAllocator allocator, GetDataSourceCapabilitiesRequest request)
+    {
+        ImmutableMap.Builder<String, List<OptimizationSubType>> capabilities = ImmutableMap.builder();
+        capabilities.put(DataSourceOptimizations.SUPPORTS_FILTER_PUSHDOWN.withSupportedSubTypes(
+                FilterPushdownSubType.SORTED_RANGE_SET, FilterPushdownSubType.NULLABLE_COMPARISON
+        ));
+        capabilities.put(DataSourceOptimizations.SUPPORTS_LIMIT_PUSHDOWN.withSupportedSubTypes(
+                LimitPushdownSubType.INTEGER_CONSTANT
+        ));
+        capabilities.put(DataSourceOptimizations.SUPPORTS_COMPLEX_EXPRESSION_PUSHDOWN.withSupportedSubTypes(
+                ComplexExpressionPushdownSubType.SUPPORTED_FUNCTION_EXPRESSION_TYPES
+                        .withSubTypeProperties(Arrays.stream(StandardFunctions.values())
+                                .map(standardFunctions -> standardFunctions.getFunctionName().getFunctionName())
+                                .toArray(String[]::new))
+        ));
+
+        capabilities.put(DataSourceOptimizations.SUPPORTS_TOP_N_PUSHDOWN.withSupportedSubTypes(TopNPushdownSubType.SUPPORTS_ORDER_BY));
+
+        jdbcQueryPassthrough.addQueryPassthroughCapabilityIfEnabled(capabilities, configOptions);
+        return new GetDataSourceCapabilitiesResponse(request.getCatalogName(), capabilities.build());
     }
 
     @Override
@@ -190,6 +239,10 @@ public class SaphanaMetadataHandler extends JdbcMetadataHandler
     public GetSplitsResponse doGetSplits(BlockAllocator blockAllocator, GetSplitsRequest getSplitsRequest)
     {
         LOGGER.debug("{}: Catalog {}, table {}", getSplitsRequest.getQueryId(), getSplitsRequest.getTableName().getSchemaName(), getSplitsRequest.getTableName().getTableName());
+        if (getSplitsRequest.getConstraints().isQueryPassThrough()) {
+            LOGGER.info("QPT Split Requested");
+            return setupQueryPassthroughSplit(getSplitsRequest);
+        }
         int partitionContd = decodeContinuationToken(getSplitsRequest);
         Set<Split> splits = new HashSet<>();
         Block partitions = getSplitsRequest.getPartitions();
@@ -222,18 +275,6 @@ public class SaphanaMetadataHandler extends JdbcMetadataHandler
         return String.valueOf(partition);
     }
 
-    @Override
-    public GetTableResponse doGetTable(final BlockAllocator blockAllocator, final GetTableRequest getTableRequest)
-            throws Exception
-    {
-        try (Connection connection = getJdbcConnectionFactory().getConnection(getCredentialProvider())) {
-            Schema partitionSchema = getPartitionSchema(getTableRequest.getCatalogName());
-            TableName tableName = getTableFromMetadata(getTableRequest.getCatalogName(), getTableRequest.getTableName(), connection.getMetaData());
-            GetTableResponse getTableResponse = new GetTableResponse(getTableRequest.getCatalogName(), tableName, getSchema(connection, tableName, partitionSchema),
-                    partitionSchema.getFields().stream().map(Field::getName).collect(Collectors.toSet()));
-            return getTableResponse;
-        }
-    }
     /**
      *
      * @param jdbcConnection
@@ -242,7 +283,8 @@ public class SaphanaMetadataHandler extends JdbcMetadataHandler
      * @return
      * @throws Exception
      */
-    private Schema getSchema(Connection jdbcConnection, TableName tableName, Schema partitionSchema)
+    @Override
+    protected Schema getSchema(Connection jdbcConnection, TableName tableName, Schema partitionSchema)
             throws Exception
     {
         LOGGER.debug("SaphanaMetadataHandler:getSchema starting");
@@ -274,10 +316,11 @@ public class SaphanaMetadataHandler extends JdbcMetadataHandler
                 String columnName = resultSet.getString(SaphanaConstants.COLUMN_NAME);
 
                 LOGGER.debug("SaphanaMetadataHandler:getSchema determining column type of column {}", columnName);
-                ArrowType columnType = JdbcArrowTypeConverter.toArrowType(
+                Optional<ArrowType> columnType = JdbcArrowTypeConverter.toArrowType(
                         resultSet.getInt("DATA_TYPE"),
                         resultSet.getInt("COLUMN_SIZE"),
-                        resultSet.getInt("DECIMAL_DIGITS"));
+                        resultSet.getInt("DECIMAL_DIGITS"),
+                        configOptions);
 
                 LOGGER.debug("SaphanaMetadataHandler:getSchema column type of column {} is {}",
                         columnName, columnType);
@@ -289,27 +332,27 @@ public class SaphanaMetadataHandler extends JdbcMetadataHandler
                  */
                 if (dataType != null
                         && (dataType.contains("ST_POINT") || dataType.contains("ST_GEOMETRY"))) {
-                    columnType = Types.MinorType.VARCHAR.getType();
+                    columnType = Optional.of(Types.MinorType.VARCHAR.getType());
                     isSpatialDataType = true;
                 }
                 /*
                  * converting into VARCHAR for Unsupported data types.
                  */
-                if ((columnType == null) || !SupportedTypes.isSupported(columnType)) {
-                    columnType = Types.MinorType.VARCHAR.getType();
+                if (columnType.isEmpty() || !SupportedTypes.isSupported(columnType.get())) {
+                    columnType = Optional.of(Types.MinorType.VARCHAR.getType());
                 }
 
-                if (columnType != null && SupportedTypes.isSupported(columnType)) {
-                    LOGGER.debug("Adding column {} to schema of type {}", columnName, columnType);
+                if (columnType.isPresent() && SupportedTypes.isSupported(columnType.get())) {
+                    LOGGER.debug("Adding column {} to schema of type {}", columnName, columnType.get());
 
                     if (isSpatialDataType) {
-                        schemaBuilder.addField(FieldBuilder.newBuilder(columnName, columnType)
+                        schemaBuilder.addField(FieldBuilder.newBuilder(columnName, columnType.get())
                                 .addField(new Field(quoteColumnName(columnName) + TO_WELL_KNOWN_TEXT_FUNCTION,
-                                        new FieldType(true, columnType, null), List.of()))
+                                        new FieldType(true, columnType.get(), null), com.google.common.collect.ImmutableList.of()))
                                 .build());
                     }
                     else {
-                        schemaBuilder.addField(FieldBuilder.newBuilder(columnName, columnType).build());
+                        schemaBuilder.addField(FieldBuilder.newBuilder(columnName, columnType.get()).build());
                     }
 
                     found = true;
@@ -327,17 +370,6 @@ public class SaphanaMetadataHandler extends JdbcMetadataHandler
         }
         LOGGER.debug(schemaBuilder.toString());
         return schemaBuilder.build();
-    }
-
-    private ResultSet getColumns(final String catalogName, final TableName tableHandle, final DatabaseMetaData metadata)
-            throws SQLException
-    {
-        String escape = metadata.getSearchStringEscape();
-        return metadata.getColumns(
-                catalogName,
-                escapeNamePattern(tableHandle.getSchemaName(), escape),
-                escapeNamePattern(tableHandle.getTableName(), escape),
-                null);
     }
 
     /**
@@ -365,83 +397,6 @@ public class SaphanaMetadataHandler extends JdbcMetadataHandler
         else {
             LOGGER.debug("Metadata available for TABLE: " + tableName.getTableName());
             return dataTypeResultSet;
-        }
-    }
-
-    /**
-     * Logic to handle case sensitivity of table name and schema name
-     * @param catalogName
-     * @param tableHandle
-     * @param metadata
-     * @return
-     * @throws SQLException
-     */
-    protected TableName getTableFromMetadata(final String catalogName, final TableName tableHandle, final DatabaseMetaData metadata)
-            throws SQLException
-    {
-        TableName tableName = findTableNameFromQueryHint(tableHandle);
-        //check for presence exact table and schema name returned by findTableNameFromQueryHint method by invoking metadata.getTables method
-        ResultSet resultSet = metadata.getTables(catalogName, tableName.getSchemaName(), tableName.getTableName(), null);
-        while (resultSet.next()) {
-            if (tableName.getTableName().equals(resultSet.getString(3))) {
-                tableName = new TableName(tableName.getSchemaName(), resultSet.getString(3));
-                return tableName;
-            }
-        }
-        // if table not found in above step, check for presence of input table by doing pattern search
-        ResultSet rs = metadata.getTables(catalogName, tableName.getSchemaName().toUpperCase(), "%", null);
-        while (rs.next()) {
-            if (tableName.getTableName().equalsIgnoreCase(rs.getString(3))) {
-                tableName = new TableName(tableName.getSchemaName().toUpperCase(), rs.getString(3));
-                return tableName;
-            }
-        }
-        return tableName;
-    }
-
-    /**
-     * Finding table name from query hint
-     * In sap hana schemas and tables can be case sensitive, but executed query from athena sends table and schema names
-     * in lower case, this has been handled by appending query hint to the table name as below
-     * "lambda:lambdaname".SCHEMA_NAME."TABLE_NAME@schemacase=upper&tablecase=upper"
-     * @param table
-     * @return
-     */
-    protected TableName findTableNameFromQueryHint(TableName table)
-    {
-        //if no query hints has been passed then return input table name
-        if (!table.getTableName().contains("@")) {
-            return table;
-        }
-        //analyze the hint to find table and schema case
-        String[] tbNameWithQueryHint = table.getTableName().split("@");
-        String[] hintDetails = tbNameWithQueryHint[1].split("&");
-        String schemaCase = SaphanaConstants.CASE_UPPER;
-        String tableCase = SaphanaConstants.CASE_UPPER;
-        String tableName = tbNameWithQueryHint[0];
-        for (String str : hintDetails) {
-            String[] hintDetail = str.split("=");
-            if (hintDetail[0].contains("schema")) {
-                schemaCase = hintDetail[1];
-            }
-            else if (hintDetail[0].contains("table")) {
-                tableCase = hintDetail[1];
-            }
-        }
-        if (schemaCase.equalsIgnoreCase(SaphanaConstants.CASE_UPPER) && tableCase.equalsIgnoreCase(SaphanaConstants.CASE_UPPER)) {
-            return new TableName(table.getSchemaName().toUpperCase(), tableName.toUpperCase());
-        }
-        else if (schemaCase.equalsIgnoreCase(SaphanaConstants.CASE_LOWER) && tableCase.equalsIgnoreCase(SaphanaConstants.CASE_LOWER)) {
-            return new TableName(table.getSchemaName().toLowerCase(), tableName.toLowerCase());
-        }
-        else if (schemaCase.equalsIgnoreCase(SaphanaConstants.CASE_LOWER) && tableCase.equalsIgnoreCase(SaphanaConstants.CASE_UPPER)) {
-            return new TableName(table.getSchemaName().toLowerCase(), tableName.toUpperCase());
-        }
-        else if (schemaCase.equalsIgnoreCase(SaphanaConstants.CASE_UPPER) && tableCase.equalsIgnoreCase(SaphanaConstants.CASE_LOWER)) {
-            return new TableName(table.getSchemaName().toUpperCase(), tableName.toLowerCase());
-        }
-        else {
-            return new TableName(table.getSchemaName().toUpperCase(), tableName.toUpperCase());
         }
     }
 
