@@ -33,25 +33,28 @@ import com.amazonaws.athena.connector.lambda.metadata.GetTableLayoutRequest;
 import com.amazonaws.athena.connector.lambda.metadata.GetTableLayoutResponse;
 import com.amazonaws.athena.connector.lambda.metadata.GetTableRequest;
 import com.amazonaws.athena.connector.lambda.metadata.GetTableResponse;
+import com.amazonaws.athena.connector.lambda.metadata.ListTablesRequest;
+import com.amazonaws.athena.connector.lambda.metadata.ListTablesResponse;
 import com.amazonaws.athena.connector.lambda.security.FederatedIdentity;
 import com.amazonaws.athena.connectors.jdbc.TestBase;
 import com.amazonaws.athena.connectors.jdbc.connection.DatabaseConnectionConfig;
 import com.amazonaws.athena.connectors.jdbc.connection.JdbcConnectionFactory;
-import com.amazonaws.athena.connectors.jdbc.connection.JdbcCredentialProvider;
-import com.amazonaws.services.athena.AmazonAthena;
-import com.amazonaws.services.secretsmanager.AWSSecretsManager;
-import com.amazonaws.services.secretsmanager.model.GetSecretValueRequest;
-import com.amazonaws.services.secretsmanager.model.GetSecretValueResult;
+import com.amazonaws.athena.connector.credentials.CredentialsProvider;
+import com.amazonaws.athena.connectors.jdbc.manager.JDBCUtil;
+import com.amazonaws.athena.connectors.synapse.resolver.SynapseJDBCCaseResolver;
 import org.apache.arrow.vector.types.pojo.Field;
 import org.apache.arrow.vector.types.pojo.Schema;
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
-import org.mockito.Mockito;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import software.amazon.awssdk.services.athena.AthenaClient;
+import software.amazon.awssdk.services.secretsmanager.SecretsManagerClient;
+import software.amazon.awssdk.services.secretsmanager.model.GetSecretValueRequest;
+import software.amazon.awssdk.services.secretsmanager.model.GetSecretValueResponse;
 
 import java.sql.Connection;
+import java.sql.DatabaseMetaData;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
@@ -67,43 +70,52 @@ import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
+import static com.amazonaws.athena.connectors.synapse.SynapseMetadataHandler.PARTITION_BOUNDARY_FROM;
+import static com.amazonaws.athena.connectors.synapse.SynapseMetadataHandler.PARTITION_BOUNDARY_TO;
+import static com.amazonaws.athena.connectors.synapse.SynapseMetadataHandler.PARTITION_COLUMN;
+import static com.amazonaws.athena.connectors.synapse.SynapseMetadataHandler.PARTITION_NUMBER;
+import static org.junit.Assert.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.ArgumentMatchers.nullable;
+import static org.mockito.Mockito.RETURNS_DEEP_STUBS;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.mockStatic;
+import static org.mockito.Mockito.when;
 
 public class SynapseMetadataHandlerTest
         extends TestBase
 {
     private static final Logger logger = LoggerFactory.getLogger(SynapseMetadataHandlerTest.class);
     private DatabaseConnectionConfig databaseConnectionConfig = new DatabaseConnectionConfig("testCatalog", SynapseConstants.NAME,
-    		  "synapse://jdbc:sqlserver://hostname;databaseName=fakedatabase");
+            "synapse://jdbc:sqlserver://hostname;databaseName=fakedatabase");
     private SynapseMetadataHandler synapseMetadataHandler;
     private JdbcConnectionFactory jdbcConnectionFactory;
     private Connection connection;
     private FederatedIdentity federatedIdentity;
-    private AWSSecretsManager secretsManager;
-    private AmazonAthena athena;
+    private SecretsManagerClient secretsManager;
+    private AthenaClient athena;
 
     @Before
     public void setup()
             throws Exception
     {
         System.setProperty("aws.region", "us-east-1");
-        this.jdbcConnectionFactory = Mockito.mock(JdbcConnectionFactory.class, Mockito.RETURNS_DEEP_STUBS);
-        this.connection = Mockito.mock(Connection.class, Mockito.RETURNS_DEEP_STUBS);
-        logger.info(" this.connection.."+ this.connection);
-        Mockito.when(this.jdbcConnectionFactory.getConnection(nullable(JdbcCredentialProvider.class))).thenReturn(this.connection);
-        this.secretsManager = Mockito.mock(AWSSecretsManager.class);
-        this.athena = Mockito.mock(AmazonAthena.class);
-        Mockito.when(this.secretsManager.getSecretValue(Mockito.eq(new GetSecretValueRequest().withSecretId("testSecret")))).thenReturn(new GetSecretValueResult().withSecretString("{\"user\": \"testUser\", \"password\": \"testPassword\"}"));
-        this.synapseMetadataHandler = new SynapseMetadataHandler(databaseConnectionConfig, this.secretsManager, this.athena, this.jdbcConnectionFactory);
-        this.federatedIdentity = Mockito.mock(FederatedIdentity.class);
+        this.jdbcConnectionFactory = mock(JdbcConnectionFactory.class, RETURNS_DEEP_STUBS);
+        this.connection = mock(Connection.class, RETURNS_DEEP_STUBS);
+        logger.info(" this.connection.." + this.connection);
+        when(this.jdbcConnectionFactory.getConnection(nullable(CredentialsProvider.class))).thenReturn(this.connection);
+        this.secretsManager = mock(SecretsManagerClient.class);
+        this.athena = mock(AthenaClient.class);
+        when(this.secretsManager.getSecretValue(eq(GetSecretValueRequest.builder().secretId("testSecret").build()))).thenReturn(GetSecretValueResponse.builder().secretString("{\"user\": \"testUser\", \"password\": \"testPassword\"}").build());
+        this.synapseMetadataHandler = new SynapseMetadataHandler(databaseConnectionConfig, this.secretsManager, this.athena, this.jdbcConnectionFactory, com.google.common.collect.ImmutableMap.of(), new SynapseJDBCCaseResolver(SynapseConstants.NAME));
+        this.federatedIdentity = mock(FederatedIdentity.class);
     }
 
     @Test
-    public void getPartitionSchema()
-    {
-        Assert.assertEquals(SchemaBuilder.newBuilder()
-                        .addField(SynapseMetadataHandler.PARTITION_NUMBER, org.apache.arrow.vector.types.Types.MinorType.VARCHAR.getType()).build(),
+    public void getPartitionSchema() {
+        assertEquals(SchemaBuilder.newBuilder()
+                        .addField(PARTITION_NUMBER, org.apache.arrow.vector.types.Types.MinorType.VARCHAR.getType()).build(),
                 this.synapseMetadataHandler.getPartitionSchema("testCatalogName"));
     }
 
@@ -112,21 +124,21 @@ public class SynapseMetadataHandlerTest
             throws Exception
     {
         BlockAllocator blockAllocator = new BlockAllocatorImpl();
-        Constraints constraints = Mockito.mock(Constraints.class);
+        Constraints constraints = mock(Constraints.class);
         TableName tableName = new TableName("testSchema", "testTable");
 
         Schema partitionSchema = this.synapseMetadataHandler.getPartitionSchema("testCatalogName");
         Set<String> partitionCols = partitionSchema.getFields().stream().map(Field::getName).collect(Collectors.toSet());
         GetTableLayoutRequest getTableLayoutRequest = new GetTableLayoutRequest(this.federatedIdentity, "testQueryId", "testCatalogName", tableName, constraints, partitionSchema, partitionCols);
 
-        String[] columns = {"ROW_COUNT", SynapseMetadataHandler.PARTITION_NUMBER, SynapseMetadataHandler.PARTITION_COLUMN, "PARTITION_BOUNDARY_VALUE"};
+        String[] columns = {"ROW_COUNT", PARTITION_NUMBER, PARTITION_COLUMN, "PARTITION_BOUNDARY_VALUE"};
         int[] types = {Types.INTEGER, Types.VARCHAR, Types.VARCHAR, Types.VARCHAR};
-        Object[][] values = {{2, null, null, null}, {0, "1", "id", "100000" }, {0, "2", "id", "300000"}};
+        Object[][] values = {{2, null, null, null}, {0, "1", "id", "100000"}, {0, "2", "id", "300000"}};
         ResultSet resultSet = mockResultSet(columns, types, values, new AtomicInteger(-1));
 
-        Statement st = Mockito.mock(Statement.class);
-        Mockito.when(this.connection.createStatement()).thenReturn(st);
-        Mockito.when(st.executeQuery(nullable(String.class))).thenReturn(resultSet);
+        Statement st = mock(Statement.class);
+        when(this.connection.createStatement()).thenReturn(st);
+        when(st.executeQuery(nullable(String.class))).thenReturn(resultSet);
 
         GetTableLayoutResponse getTableLayoutResponse = this.synapseMetadataHandler.doGetTableLayout(blockAllocator, getTableLayoutRequest);
 
@@ -134,13 +146,13 @@ public class SynapseMetadataHandlerTest
         for (int i = 0; i < getTableLayoutResponse.getPartitions().getRowCount(); i++) {
             actualValues.add(BlockUtils.rowToString(getTableLayoutResponse.getPartitions(), i));
         }
-        Assert.assertEquals(Arrays.asList("[PARTITION_NUMBER : 1::: :::100000:::id]","[PARTITION_NUMBER : 2:::100000:::300000:::id]"), actualValues);
+        assertEquals(Arrays.asList("[partition_number : 1::: :::100000:::id]", "[partition_number : 2:::100000:::300000:::id]"), actualValues);
 
         SchemaBuilder expectedSchemaBuilder = SchemaBuilder.newBuilder();
-        expectedSchemaBuilder.addField(FieldBuilder.newBuilder(SynapseMetadataHandler.PARTITION_NUMBER, org.apache.arrow.vector.types.Types.MinorType.VARCHAR.getType()).build());
+        expectedSchemaBuilder.addField(FieldBuilder.newBuilder(PARTITION_NUMBER, org.apache.arrow.vector.types.Types.MinorType.VARCHAR.getType()).build());
         Schema expectedSchema = expectedSchemaBuilder.build();
-        Assert.assertEquals(expectedSchema, getTableLayoutResponse.getPartitions().getSchema());
-        Assert.assertEquals(tableName, getTableLayoutResponse.getTableName());
+        assertEquals(expectedSchema, getTableLayoutResponse.getPartitions().getSchema());
+        assertEquals(tableName, getTableLayoutResponse.getTableName());
     }
 
     @Test
@@ -148,54 +160,54 @@ public class SynapseMetadataHandlerTest
             throws Exception
     {
         BlockAllocator blockAllocator = new BlockAllocatorImpl();
-        Constraints constraints = Mockito.mock(Constraints.class);
+        Constraints constraints = mock(Constraints.class);
         TableName tableName = new TableName("testSchema", "testTable");
         Schema partitionSchema = this.synapseMetadataHandler.getPartitionSchema("testCatalogName");
         Set<String> partitionCols = partitionSchema.getFields().stream().map(Field::getName).collect(Collectors.toSet());
         GetTableLayoutRequest getTableLayoutRequest = new GetTableLayoutRequest(this.federatedIdentity, "testQueryId", "testCatalogName", tableName, constraints, partitionSchema, partitionCols);
 
         Object[][] values = {{}};
-        ResultSet resultSet = mockResultSet(new String[] {"ROW_COUNT"}, new int[] {Types.INTEGER}, values, new AtomicInteger(-1));
+        ResultSet resultSet = mockResultSet(new String[]{"ROW_COUNT"}, new int[]{Types.INTEGER}, values, new AtomicInteger(-1));
 
-        Statement st = Mockito.mock(Statement.class);
-        Mockito.when(this.connection.createStatement()).thenReturn(st);
-        Mockito.when(st.executeQuery(nullable(String.class))).thenReturn(resultSet);
+        Statement st = mock(Statement.class);
+        when(this.connection.createStatement()).thenReturn(st);
+        when(st.executeQuery(nullable(String.class))).thenReturn(resultSet);
 
         GetTableLayoutResponse getTableLayoutResponse = this.synapseMetadataHandler.doGetTableLayout(blockAllocator, getTableLayoutRequest);
 
-        Assert.assertEquals(values.length, getTableLayoutResponse.getPartitions().getRowCount());
+        assertEquals(values.length, getTableLayoutResponse.getPartitions().getRowCount());
 
         List<String> actualValues = new ArrayList<>();
         for (int i = 0; i < getTableLayoutResponse.getPartitions().getRowCount(); i++) {
             actualValues.add(BlockUtils.rowToString(getTableLayoutResponse.getPartitions(), i));
         }
 
-        Assert.assertEquals(Collections.singletonList("[PARTITION_NUMBER : 0]"), actualValues);
+        assertEquals(Collections.singletonList("[partition_number : 0]"), actualValues);
 
         SchemaBuilder expectedSchemaBuilder = SchemaBuilder.newBuilder();
-        expectedSchemaBuilder.addField(FieldBuilder.newBuilder(SynapseMetadataHandler.PARTITION_NUMBER, org.apache.arrow.vector.types.Types.MinorType.VARCHAR.getType()).build());
+        expectedSchemaBuilder.addField(FieldBuilder.newBuilder(PARTITION_NUMBER, org.apache.arrow.vector.types.Types.MinorType.VARCHAR.getType()).build());
         Schema expectedSchema = expectedSchemaBuilder.build();
-        Assert.assertEquals(expectedSchema, getTableLayoutResponse.getPartitions().getSchema());
-        Assert.assertEquals(tableName, getTableLayoutResponse.getTableName());
+        assertEquals(expectedSchema, getTableLayoutResponse.getPartitions().getSchema());
+        assertEquals(tableName, getTableLayoutResponse.getTableName());
     }
 
     @Test(expected = RuntimeException.class)
     public void doGetTableLayoutWithSQLException()
             throws Exception
     {
-        Constraints constraints = Mockito.mock(Constraints.class);
+        Constraints constraints = mock(Constraints.class);
         TableName tableName = new TableName("testSchema", "testTable");
         Schema partitionSchema = this.synapseMetadataHandler.getPartitionSchema("testCatalogName");
         Set<String> partitionCols = partitionSchema.getFields().stream().map(Field::getName).collect(Collectors.toSet());
         GetTableLayoutRequest getTableLayoutRequest = new GetTableLayoutRequest(this.federatedIdentity, "testQueryId", "testCatalogName", tableName, constraints, partitionSchema, partitionCols);
 
-        Connection connection = Mockito.mock(Connection.class, Mockito.RETURNS_DEEP_STUBS);
-        JdbcConnectionFactory jdbcConnectionFactory = Mockito.mock(JdbcConnectionFactory.class);
-        Mockito.when(jdbcConnectionFactory.getConnection(nullable(JdbcCredentialProvider.class))).thenReturn(connection);
-        Mockito.when(connection.getMetaData().getSearchStringEscape()).thenThrow(new SQLException());
-        SynapseMetadataHandler synapseMetadataHandler = new SynapseMetadataHandler(databaseConnectionConfig, this.secretsManager, this.athena, jdbcConnectionFactory);
+        Connection connection = mock(Connection.class, RETURNS_DEEP_STUBS);
+        JdbcConnectionFactory jdbcConnectionFactory = mock(JdbcConnectionFactory.class);
+        when(jdbcConnectionFactory.getConnection(nullable(CredentialsProvider.class))).thenReturn(connection);
+        when(connection.getMetaData().getSearchStringEscape()).thenThrow(new SQLException());
+        SynapseMetadataHandler synapseMetadataHandler = new SynapseMetadataHandler(databaseConnectionConfig, this.secretsManager, this.athena, jdbcConnectionFactory, com.google.common.collect.ImmutableMap.of(), new SynapseJDBCCaseResolver(SynapseConstants.NAME));
 
-        synapseMetadataHandler.doGetTableLayout(Mockito.mock(BlockAllocator.class), getTableLayoutRequest);
+        synapseMetadataHandler.doGetTableLayout(mock(BlockAllocator.class), getTableLayoutRequest);
     }
 
     @Test
@@ -203,18 +215,18 @@ public class SynapseMetadataHandlerTest
             throws Exception
     {
         BlockAllocator blockAllocator = new BlockAllocatorImpl();
-        Constraints constraints = Mockito.mock(Constraints.class);
+        Constraints constraints = mock(Constraints.class);
         TableName tableName = new TableName("testSchema", "testTable");
 
-        String[] columns = {"ROW_COUNT", SynapseMetadataHandler.PARTITION_NUMBER, SynapseMetadataHandler.PARTITION_COLUMN, "PARTITION_BOUNDARY_VALUE"};
+        String[] columns = {"ROW_COUNT", PARTITION_NUMBER, PARTITION_COLUMN, "PARTITION_BOUNDARY_VALUE"};
         int[] types = {Types.INTEGER, Types.VARCHAR, Types.VARCHAR, Types.VARCHAR};
         Object[][] values = {{2, null, null, null}, {0, 1, "id", "0"}, {0, 2, "id", "105"}, {0, 3, "id", "327"}, {0, 4, "id", null}};
 
         ResultSet resultSet = mockResultSet(columns, types, values, new AtomicInteger(-1));
 
-        Statement st = Mockito.mock(Statement.class);
-        Mockito.when(this.connection.createStatement()).thenReturn(st);
-        Mockito.when(st.executeQuery(nullable(String.class))).thenReturn(resultSet);
+        Statement st = mock(Statement.class);
+        when(this.connection.createStatement()).thenReturn(st);
+        when(st.executeQuery(nullable(String.class))).thenReturn(resultSet);
 
         Schema partitionSchema = this.synapseMetadataHandler.getPartitionSchema("testCatalogName");
         Set<String> partitionCols = partitionSchema.getFields().stream().map(Field::getName).collect(Collectors.toSet());
@@ -226,31 +238,34 @@ public class SynapseMetadataHandlerTest
         GetSplitsRequest getSplitsRequest = new GetSplitsRequest(this.federatedIdentity, "testQueryId", "testCatalogName", tableName, getTableLayoutResponse.getPartitions(), new ArrayList<>(partitionCols), constraints, null);
         GetSplitsResponse getSplitsResponse = this.synapseMetadataHandler.doGetSplits(splitBlockAllocator, getSplitsRequest);
 
-        Set<Map<String, String>> expectedSplits = new HashSet<>();
-        expectedSplits.add(Map.ofEntries(
-                Map.entry("PARTITION_BOUNDARY_FROM", " "),
-                Map.entry(SynapseMetadataHandler.PARTITION_NUMBER, "1"),
-                Map.entry("PARTITION_COLUMN", "id"),
-                Map.entry("PARTITION_BOUNDARY_TO", "0")));
-        expectedSplits.add(Map.ofEntries(
-                Map.entry("PARTITION_BOUNDARY_FROM", "0"),
-                Map.entry(SynapseMetadataHandler.PARTITION_NUMBER, "2"),
-                Map.entry("PARTITION_COLUMN", "id"),
-                Map.entry("PARTITION_BOUNDARY_TO", "105")));
-        expectedSplits.add(Map.ofEntries(
-                Map.entry("PARTITION_BOUNDARY_FROM", "105"),
-                Map.entry(SynapseMetadataHandler.PARTITION_NUMBER, "3"),
-                Map.entry("PARTITION_COLUMN", "id"),
-                Map.entry("PARTITION_BOUNDARY_TO", "327")));
-        expectedSplits.add(Map.ofEntries(
-                Map.entry("PARTITION_BOUNDARY_FROM", "327"),
-                Map.entry(SynapseMetadataHandler.PARTITION_NUMBER, "4"),
-                Map.entry("PARTITION_COLUMN", "id"),
-                Map.entry("PARTITION_BOUNDARY_TO", "null")));
+        // TODO: Not sure why this is a set of maps, but I'm not going to change it
+        // other than mechanically making it java 8 compatible
+        Set<Map<String, String>> expectedSplits = com.google.common.collect.ImmutableSet.of(
+            com.google.common.collect.ImmutableMap.of(
+                PARTITION_BOUNDARY_FROM, " ",
+                PARTITION_NUMBER, "1",
+                PARTITION_COLUMN, "id",
+                PARTITION_BOUNDARY_TO, "0"),
+            com.google.common.collect.ImmutableMap.of(
+                PARTITION_BOUNDARY_FROM, "0",
+                PARTITION_NUMBER, "2",
+                PARTITION_COLUMN, "id",
+                PARTITION_BOUNDARY_TO, "105"),
+            com.google.common.collect.ImmutableMap.of(
+                PARTITION_BOUNDARY_FROM, "105",
+                PARTITION_NUMBER, "3",
+                PARTITION_COLUMN, "id",
+                PARTITION_BOUNDARY_TO, "327"),
+            com.google.common.collect.ImmutableMap.of(
+                PARTITION_BOUNDARY_FROM, "327",
+                PARTITION_NUMBER, "4",
+                PARTITION_COLUMN, "id",
+                PARTITION_BOUNDARY_TO, "null")
+        );
 
-        Assert.assertEquals(expectedSplits.size(), getSplitsResponse.getSplits().size());
+        assertEquals(expectedSplits.size(), getSplitsResponse.getSplits().size());
         Set<Map<String, String>> actualSplits = getSplitsResponse.getSplits().stream().map(Split::getProperties).collect(Collectors.toSet());
-        Assert.assertEquals(expectedSplits, actualSplits);
+        assertEquals(expectedSplits, actualSplits);
     }
 
     @Test
@@ -258,15 +273,15 @@ public class SynapseMetadataHandlerTest
             throws Exception
     {
         BlockAllocator blockAllocator = new BlockAllocatorImpl();
-        Constraints constraints = Mockito.mock(Constraints.class);
+        Constraints constraints = mock(Constraints.class);
         TableName tableName = new TableName("testSchema", "testTable");
 
         Object[][] values = {{}};
-        ResultSet resultSet = mockResultSet(new String[] {"ROW_COUNT"}, new int[] {Types.INTEGER}, values, new AtomicInteger(-1));
+        ResultSet resultSet = mockResultSet(new String[]{"ROW_COUNT"}, new int[]{Types.INTEGER}, values, new AtomicInteger(-1));
 
-        Statement st = Mockito.mock(Statement.class);
-        Mockito.when(this.connection.createStatement()).thenReturn(st);
-        Mockito.when(st.executeQuery(nullable(String.class))).thenReturn(resultSet);
+        Statement st = mock(Statement.class);
+        when(this.connection.createStatement()).thenReturn(st);
+        when(st.executeQuery(nullable(String.class))).thenReturn(resultSet);
 
         Schema partitionSchema = this.synapseMetadataHandler.getPartitionSchema("testCatalogName");
         Set<String> partitionCols = partitionSchema.getFields().stream().map(Field::getName).collect(Collectors.toSet());
@@ -279,10 +294,10 @@ public class SynapseMetadataHandlerTest
         GetSplitsResponse getSplitsResponse = this.synapseMetadataHandler.doGetSplits(splitBlockAllocator, getSplitsRequest);
 
         Set<Map<String, String>> expectedSplits = new HashSet<>();
-        expectedSplits.add(Collections.singletonMap(SynapseMetadataHandler.PARTITION_NUMBER, "0"));
-        Assert.assertEquals(expectedSplits.size(), getSplitsResponse.getSplits().size());
+        expectedSplits.add(Collections.singletonMap(PARTITION_NUMBER, "0"));
+        assertEquals(expectedSplits.size(), getSplitsResponse.getSplits().size());
         Set<Map<String, String>> actualSplits = getSplitsResponse.getSplits().stream().map(Split::getProperties).collect(Collectors.toSet());
-        Assert.assertEquals(expectedSplits, actualSplits);
+        assertEquals(expectedSplits, actualSplits);
     }
 
     @Test
@@ -290,21 +305,21 @@ public class SynapseMetadataHandlerTest
             throws Exception
     {
         BlockAllocator blockAllocator = new BlockAllocatorImpl();
-        Constraints constraints = Mockito.mock(Constraints.class);
+        Constraints constraints = mock(Constraints.class);
         TableName tableName = new TableName("testSchema", "testTable");
         Schema partitionSchema = this.synapseMetadataHandler.getPartitionSchema("testCatalogName");
         Set<String> partitionCols = partitionSchema.getFields().stream().map(Field::getName).collect(Collectors.toSet());
         GetTableLayoutRequest getTableLayoutRequest = new GetTableLayoutRequest(this.federatedIdentity, "testQueryId", "testCatalogName", tableName, constraints, partitionSchema, partitionCols);
 
-        String[] columns = {"ROW_COUNT", SynapseMetadataHandler.PARTITION_NUMBER, SynapseMetadataHandler.PARTITION_COLUMN, "PARTITION_BOUNDARY_VALUE"};
+        String[] columns = {"ROW_COUNT", PARTITION_NUMBER, PARTITION_COLUMN, "PARTITION_BOUNDARY_VALUE"};
         int[] types = {Types.INTEGER, Types.VARCHAR, Types.VARCHAR, Types.VARCHAR};
         Object[][] values = {{2, null, null, null}, {0, 1, "id", "0"}, {0, 2, "id", "105"}, {0, 3, "id", "327"}, {0, 4, "id", null}};
 
         ResultSet resultSet = mockResultSet(columns, types, values, new AtomicInteger(-1));
 
-        Statement st = Mockito.mock(Statement.class);
-        Mockito.when(this.connection.createStatement()).thenReturn(st);
-        Mockito.when(st.executeQuery(nullable(String.class))).thenReturn(resultSet);
+        Statement st = mock(Statement.class);
+        when(this.connection.createStatement()).thenReturn(st);
+        when(st.executeQuery(nullable(String.class))).thenReturn(resultSet);
 
         GetTableLayoutResponse getTableLayoutResponse = this.synapseMetadataHandler.doGetTableLayout(blockAllocator, getTableLayoutRequest);
 
@@ -312,26 +327,26 @@ public class SynapseMetadataHandlerTest
         GetSplitsRequest getSplitsRequest = new GetSplitsRequest(this.federatedIdentity, "testQueryId", "testCatalogName", tableName, getTableLayoutResponse.getPartitions(), new ArrayList<>(partitionCols), constraints, "2");
         GetSplitsResponse getSplitsResponse = this.synapseMetadataHandler.doGetSplits(splitBlockAllocator, getSplitsRequest);
 
-        Set<Map<String, String>> expectedSplits = new HashSet<>();
-        expectedSplits.add(Map.ofEntries(
-                Map.entry("PARTITION_BOUNDARY_FROM", "105"),
-                Map.entry(SynapseMetadataHandler.PARTITION_NUMBER, "3"),
-                Map.entry("PARTITION_COLUMN", "id"),
-                Map.entry("PARTITION_BOUNDARY_TO", "327")));
-        expectedSplits.add(Map.ofEntries(
-                Map.entry("PARTITION_BOUNDARY_FROM", "327"),
-                Map.entry(SynapseMetadataHandler.PARTITION_NUMBER, "4"),
-                Map.entry("PARTITION_COLUMN", "id"),
-                Map.entry("PARTITION_BOUNDARY_TO", "null")));
+        Set<Map<String, String>> expectedSplits = com.google.common.collect.ImmutableSet.of(
+            com.google.common.collect.ImmutableMap.of(
+                PARTITION_BOUNDARY_FROM, "105",
+                PARTITION_NUMBER, "3",
+                PARTITION_COLUMN, "id",
+                PARTITION_BOUNDARY_TO, "327"),
+            com.google.common.collect.ImmutableMap.of(
+                PARTITION_BOUNDARY_FROM, "327",
+                PARTITION_NUMBER, "4",
+                PARTITION_COLUMN, "id",
+                PARTITION_BOUNDARY_TO, "null"));
         Set<Map<String, String>> actualSplits = getSplitsResponse.getSplits().stream().map(Split::getProperties).collect(Collectors.toSet());
-        Assert.assertEquals(expectedSplits, actualSplits);
+        assertEquals(expectedSplits, actualSplits);
     }
 
     @Test
     public void doGetTable()
             throws Exception
     {
-        Schema PARTITION_SCHEMA = SchemaBuilder.newBuilder().addField("PARTITION_NUMBER", org.apache.arrow.vector.types.Types.MinorType.VARCHAR.getType()).build();
+        Schema PARTITION_SCHEMA = SchemaBuilder.newBuilder().addField(PARTITION_NUMBER, org.apache.arrow.vector.types.Types.MinorType.VARCHAR.getType()).build();
 
         BlockAllocator blockAllocator = new BlockAllocatorImpl();
         String[] schema = {"DATA_TYPE", "COLUMN_NAME", "PRECISION", "SCALE"};
@@ -350,25 +365,25 @@ public class SynapseMetadataHandlerTest
         expectedSchemaBuilder.addField(FieldBuilder.newBuilder("testCol1", org.apache.arrow.vector.types.Types.MinorType.INT.getType()).build());
         expectedSchemaBuilder.addField(FieldBuilder.newBuilder("testCol2", org.apache.arrow.vector.types.Types.MinorType.VARCHAR.getType()).build());
         expectedSchemaBuilder.addField(FieldBuilder.newBuilder("testCol3", org.apache.arrow.vector.types.Types.MinorType.DATEMILLI.getType()).build());
-        expectedSchemaBuilder.addField(FieldBuilder.newBuilder("testCol4", org.apache.arrow.vector.types.Types.MinorType.VARCHAR.getType()).build());
+        expectedSchemaBuilder.addField(FieldBuilder.newBuilder("testCol4", org.apache.arrow.vector.types.Types.MinorType.DATEMILLI.getType()).build());
         PARTITION_SCHEMA.getFields().forEach(expectedSchemaBuilder::addField);
         Schema expected = expectedSchemaBuilder.build();
 
-        PreparedStatement stmt = Mockito.mock(PreparedStatement.class);
-        Mockito.when(connection.prepareStatement(nullable(String.class))).thenReturn(stmt);
-        Mockito.when(stmt.executeQuery()).thenReturn(resultSet);
+        PreparedStatement stmt = mock(PreparedStatement.class);
+        when(connection.prepareStatement(nullable(String.class))).thenReturn(stmt);
+        when(stmt.executeQuery()).thenReturn(resultSet);
 
-        Mockito.when(connection.getMetaData().getURL()).thenReturn("jdbc:sqlserver://hostname;databaseName=fakedatabase");
+        when(connection.getMetaData().getURL()).thenReturn("jdbc:sqlserver://hostname;databaseName=fakedatabase");
 
         TableName inputTableName = new TableName("TESTSCHEMA", "TESTTABLE");
-        Mockito.when(connection.getCatalog()).thenReturn("testCatalog");
-        Mockito.when(connection.getMetaData().getColumns("testCatalog", inputTableName.getSchemaName(), inputTableName.getTableName(), null)).thenReturn(resultSet2);
+        when(connection.getCatalog()).thenReturn("testCatalog");
+        when(connection.getMetaData().getColumns("testCatalog", inputTableName.getSchemaName(), inputTableName.getTableName(), null)).thenReturn(resultSet2);
 
         GetTableResponse getTableResponse = this.synapseMetadataHandler.doGetTable(
-                blockAllocator, new GetTableRequest(this.federatedIdentity, "testQueryId", "testCatalog", inputTableName));
-        Assert.assertEquals(expected, getTableResponse.getSchema());
-        Assert.assertEquals(inputTableName, getTableResponse.getTableName());
-        Assert.assertEquals("testCatalog", getTableResponse.getCatalogName());
+                blockAllocator, new GetTableRequest(this.federatedIdentity, "testQueryId", "testCatalog", inputTableName, Collections.emptyMap()));
+        assertEquals(expected, getTableResponse.getSchema());
+        assertEquals(inputTableName, getTableResponse.getTableName());
+        assertEquals("testCatalog", getTableResponse.getCatalogName());
     }
 
     @Test
@@ -388,19 +403,54 @@ public class SynapseMetadataHandlerTest
                 {Types.TIMESTAMP, 93, 0, "testCol3"}, {Types.TIMESTAMP_WITH_TIMEZONE, 93, 0, "testCol4"}};
         ResultSet resultSet2 = mockResultSet(columns, types2, values2, new AtomicInteger(-1));
 
-        PreparedStatement stmt = Mockito.mock(PreparedStatement.class);
-        Mockito.when(connection.prepareStatement(nullable(String.class))).thenReturn(stmt);
-        Mockito.when(stmt.executeQuery()).thenReturn(resultSet);
+        PreparedStatement stmt = mock(PreparedStatement.class);
+        when(connection.prepareStatement(nullable(String.class))).thenReturn(stmt);
+        when(stmt.executeQuery()).thenReturn(resultSet);
 
-        Mockito.when(connection.getMetaData().getURL()).thenReturn("jdbc:sqlserver://hostname-ondemand;databaseName=fakedatabase");
+        when(connection.getMetaData().getURL()).thenReturn("jdbc:sqlserver://hostname-ondemand;databaseName=fakedatabase");
 
         TableName inputTableName = new TableName("TESTSCHEMA", "TESTTABLE");
-        Mockito.when(connection.getCatalog()).thenReturn("testCatalog");
-        Mockito.when(connection.getMetaData().getColumns("testCatalog", inputTableName.getSchemaName(), inputTableName.getTableName(), null)).thenReturn(resultSet2);
+        when(connection.getCatalog()).thenReturn("testCatalog");
+        when(connection.getMetaData().getColumns("testCatalog", inputTableName.getSchemaName(), inputTableName.getTableName(), null)).thenReturn(resultSet2);
 
         GetTableResponse getTableResponse = this.synapseMetadataHandler.doGetTable(
-                blockAllocator, new GetTableRequest(this.federatedIdentity, "testQueryId", "testCatalog", inputTableName));
-        Assert.assertEquals(inputTableName, getTableResponse.getTableName());
-        Assert.assertEquals("testCatalog", getTableResponse.getCatalogName());
+                blockAllocator, new GetTableRequest(this.federatedIdentity, "testQueryId", "testCatalog", inputTableName, Collections.emptyMap()));
+        assertEquals(inputTableName, getTableResponse.getTableName());
+        assertEquals("testCatalog", getTableResponse.getCatalogName());
+    }
+
+    @Test
+    public void doListTables() throws Exception
+    {
+        BlockAllocator blockAllocator = new BlockAllocatorImpl();
+        String schemaName = "TESTSCHEMA";
+        ListTablesRequest listTablesRequest = new ListTablesRequest(federatedIdentity, "queryId", "testCatalog", schemaName, null, 3);
+
+        DatabaseMetaData mockDatabaseMetaData = mock(DatabaseMetaData.class);
+        ResultSet mockResultSet = mock(ResultSet.class);
+
+        when(connection.getMetaData()).thenReturn(mockDatabaseMetaData);
+        when(mockDatabaseMetaData.getTables(any(), any(), any(), any())).thenReturn(mockResultSet);
+
+        when(mockResultSet.next()).thenReturn(true).thenReturn(true).thenReturn(true).thenReturn(false);
+        when(mockResultSet.getString(3)).thenReturn("TESTTABLE").thenReturn("testtable").thenReturn("testTABLE");
+        when(mockResultSet.getString(2)).thenReturn(schemaName);
+
+        mockStatic(JDBCUtil.class);
+        when(JDBCUtil.getSchemaTableName(mockResultSet)).thenReturn(new TableName("TESTSCHEMA", "TESTTABLE"))
+                .thenReturn(new TableName("TESTSCHEMA", "testtable"))
+                .thenReturn(new TableName("TESTSCHEMA", "testTABLE"));
+
+        when(this.jdbcConnectionFactory.getConnection(any())).thenReturn(connection);
+
+        ListTablesResponse listTablesResponse = this.synapseMetadataHandler.doListTables(blockAllocator, listTablesRequest);
+
+        TableName[] expectedTables = {
+                new TableName("TESTSCHEMA", "TESTTABLE"),
+                new TableName("TESTSCHEMA", "testtable"),
+                new TableName("TESTSCHEMA", "testTABLE")
+        };
+
+        assertEquals(Arrays.toString(expectedTables), listTablesResponse.getTables().toString());
     }
 }
